fix widget-story blinking on safari

--- a/src/styles/widgets/_story.scss
+++ b/src/styles/widgets/_story.scss
@@ -51,9 +51,8 @@
       object-fit: cover;
       object-position: center;
 
+      will-change: transform;
       transition: opacity .25s;
-
-      -webkit-backface-visibility: hidden;
     }
 
     @media screen and (max-width: 1023px) {
